@@ -39,7 +39,9 @@ gui_buttons.hxx gui_buttons.cxx \
 zoom_graphic_context.cxx zoom_graphic_context.hxx \
 colors.hxx colors.cxx \
 gui_window.hxx gui_window.cxx \
-gui_component.cxx
+gui_component.cxx \
+command_line.hxx command_line.cxx \
+settings.hxx  settings.cxx 
 
 LDADD=-L/usr/X11R6/lib/ -lXext -lXxf86vm
 
