@@ -11,6 +11,8 @@ Construo 0.2.0
  * added GUI
 
  * House of Horror Part1 and Part2 added
+ 
+ * fullscreen support added
 
 
 Construo 0.1.0
